--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
               <br>
               <span class="NOTE">NOTE - use both your left and rigth wrists and move them together </span>
               <br>
-                <span id="width"></span>
+                <span id="font_size"></span>
             </h3>
             <div class="footer">Devoloped by Marissa</div>
           </center>
